--- a/_includes/bullet_list.html
+++ b/_includes/bullet_list.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <ul class="ui twelve wide column">
+  <ul class="ui twelve wide column list">
     {% for bullet in include.item.bullets %}
     <li>{{bullet}}</li>
     {% endfor %}
