--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
   {% seo %}
   <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   <link rel="stylesheet" href="{{ '/assets/css/layout.css?v=' | append: site.github.build_revision | relative_url }}">
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="3ff15693-afa8-4d4a-8929-d2c7900bd2c2"></script>
 </head>
 <body>
   <div class="site-container">
